# bevy_foliage_tool

./: Cargo.toml  readme.md  todo.md
assets/foliage/: foliage_config.ron  foliage_manifest.ron
assets/foliage/default_foliage/: foliage_config.ron
assets/foliage/foliage_scenes/: raven_woods_foliage_old.foliage
examples/: basic.rs
src/: edit.rs  foliage_assets.rs  foliage_chunk.rs  foliage_chunk_layer.rs  foliage_config.rs  foliage_density.rs  foliage_layer.rs  foliage_loading_state.rs  foliage_material.rs  foliage_proto.rs  foliage_registration.rs  foliage_scene.rs  foliage_types.rs  foliage_viewer.rs  lib.rs  noise.rs  regions_loading_state.rs
src/deprecated/: foliage.rs  regionmap.rs  regions.rs  regions_config.rs  regions_material.rs
src/shaders/: foliage.wgsl
